gatekeeper/constraints/deny-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoHostNetwork
metadata:
  name: deny-hostnetwork
  annotations:                             # <-- THÊM ĐOẠN NÀY
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
