gatekeeper/constraints/deny-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRunAsNonRoot
metadata:
  name: deny-root
  annotations:                             # <-- THÊM ĐOẠN NÀY
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
